Allow any blockified display type for LEGEND.

Fixed one test that I expected to pass, but didn't because it was
pointing to the wrong ref. Fixed that, and now it passes. Updated
some expectation files. More stuff from various tests (but not
whole tests) is passing than before.

Bug: 781135
Change-Id: Ieb1312b8bf13c7a45afe644ad2a58f3f955044b6
Reviewed-on: https://chromium-review.googlesource.com/1228073
Reviewed-by: Emil A Eklund <eae@chromium.org>
Commit-Queue: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592403}
Former-commit-id: 3bc5404659b20bec0948f0af3b3115fb9d8664fa